[gd_scene load_steps=5 format=3 uid="uid://bry24iy8yquhe"]

[ext_resource type="Script" path="res://entities/shard_system/shard_collector.gd" id="1_j3ome"]
[ext_resource type="Texture2D" uid="uid://pj2ni4swmbc3" path="res://entities/shard_system/CollectionStone.PNG" id="2_egqme"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1imq2"]
radius = 17.8885

[sub_resource type="CircleShape2D" id="CircleShape2D_2p5y3"]
radius = 9.0

[node name="ShardCollector" type="Node2D" node_paths=PackedStringArray("collection_radius", "attraction_radius")]
script = ExtResource("1_j3ome")
collection_radius = NodePath("CollectionRadius")
attraction_radius = NodePath("AttractionRadius")

[node name="CollectorSprite" type="Sprite2D" parent="."]
position = Vector2(0, 25)
texture = ExtResource("2_egqme")

[node name="CollectionRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollectionShape" type="CollisionShape2D" parent="CollectionRadius"]
shape = SubResource("CircleShape2D_1imq2")

[node name="AttractionRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttractionRadius"]
shape = SubResource("CircleShape2D_2p5y3")

[connection signal="area_entered" from="CollectionRadius" to="." method="_on_collection_radius_area_entered"]
[connection signal="area_entered" from="AttractionRadius" to="." method="_on_attraction_radius_area_entered"]
